#24380 DT Name & #24377 Column Spacing Issue

--- a/app/src/pages/utility/styles/Table.scss
+++ b/app/src/pages/utility/styles/Table.scss
@@ -178,6 +178,10 @@
     border-bottom: 1px solid white;
 }
 
+.dt__table_add_column{
+    flex-basis: 4%;
+}
+
 
 .dt__subHeaderCell{
     input{
